<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_g29_driving_force_controller</name>
  <version>0.0.0</version>
  <description>The autoware_g29_driving_force_controller package</description>
  <maintainer email="kuriatsubayashi712@gmail.com">kuriatsu</maintainer>
  <maintainer email="yukky.saito@gmail.com">Yukihiro Saito</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <!-- <depend>std_msgs</depend> -->
  <depend>autoware_auto_vehicle_msgs</depend>

  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
